<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/Honeydew"
    tools:context=".activities.series.SeriesAdd">

    <Button
        android:id="@+id/btnEnterBrowseS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:width="280dp"
        android:backgroundTint="@color/Celadon_Blue"
        android:text="@string/browse"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEnterTitleS"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:hint="@string/enter_series_title"
        android:maxLines="1"
        android:paddingStart="5dp"
        android:scrollHorizontally="true"
        android:textColor="@color/Prussian_Blue"
        android:textColorHint="@color/Prussian_Blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEnterBrowseS" />

    <EditText
        android:id="@+id/etEnterSeasonS"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:hint="@string/enter_season_number"
        android:inputType="number"
        android:maxLength="4"
        android:paddingStart="5dp"
        android:textColor="@color/Prussian_Blue"
        android:textColorHint="@color/Prussian_Blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEnterTitleS" />

    <EditText
        android:id="@+id/etEnterEpisodeS"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:hint="@string/enter_episode_number"
        android:inputType="number"
        android:maxLength="4"
        android:paddingStart="5dp"
        android:textColorHint="@color/Prussian_Blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEnterSeasonS" />

    <TextView
        android:id="@+id/tvEnterMinuteS"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/minute"
        android:textColor="@color/Prussian_Blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/etEnterEpisodeS"
        app:layout_constraintTop_toBottomOf="@id/etEnterEpisodeS" />

    <EditText
        android:id="@+id/etEnterMinuteS"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@color/Prussian_Blue"
        android:textColorHint="@color/Prussian_Blue"
        app:layout_constraintStart_toEndOf="@id/tvEnterMinuteS"
        app:layout_constraintTop_toBottomOf="@id/etEnterEpisodeS" />

    <TextView
        android:id="@+id/tvEnterSecondS"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/second"
        android:textColor="@color/Prussian_Blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/etEnterSecondS"
        app:layout_constraintTop_toBottomOf="@id/etEnterEpisodeS" />

    <EditText
        android:id="@+id/etEnterSecondS"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/zero"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="@color/Prussian_Blue"
        android:textColorHint="@color/Prussian_Blue"
        app:layout_constraintEnd_toEndOf="@id/etEnterEpisodeS"
        app:layout_constraintTop_toBottomOf="@id/etEnterEpisodeS" />

    <EditText
        android:id="@+id/etEnterImageS"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:hint="@string/enter_series_image"
        android:maxLines="1"
        android:paddingStart="5dp"
        android:scrollHorizontally="true"
        android:textColor="@color/Prussian_Blue"
        android:textColorHint="@color/Prussian_Blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEnterMinuteS" />

    <TextView
        android:id="@+id/tvEnterSetStateS"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/set_state"
        android:textColor="@color/Prussian_Blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/etEnterImageS"
        app:layout_constraintTop_toBottomOf="@id/etEnterImageS" />

    <RadioGroup
        android:id="@+id/rgEnterSetStateS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@id/tvEnterSetStateS"
        app:layout_constraintTop_toBottomOf="@id/etEnterImageS">

        <RadioButton
            android:id="@+id/rbEnterToWatchS"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:buttonTint="@color/Prussian_Blue"
            android:checked="true"
            android:drawableEnd="@drawable/ic_star_border"
            android:paddingStart="5dp"
            android:text="to watch  "
            android:textColor="@color/Prussian_Blue" />

        <RadioButton
            android:id="@+id/rbEnterWatchingS"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:buttonTint="@color/Prussian_Blue"
            android:drawableEnd="@drawable/ic_star_half"
            android:paddingStart="5dp"
            android:text="watching "
            android:textColor="@color/Prussian_Blue" />

        <RadioButton
            android:id="@+id/rbEnterWatchedS"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:buttonTint="@color/Prussian_Blue"
            android:drawableEnd="@drawable/ic_star"
            android:paddingStart="5dp"
            android:text="watched  "
            android:textColor="@color/Prussian_Blue" />
    </RadioGroup>

    <Button
        android:id="@+id/btnEnterCancelS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:width="139dp"
        android:backgroundTint="@color/Powder_Blue"
        android:text="@string/cancel"
        android:textColor="@color/Prussian_Blue"
        app:layout_constraintStart_toStartOf="@id/tvEnterMinuteS"
        app:layout_constraintTop_toBottomOf="@id/rgEnterSetStateS" />

    <Button
        android:id="@+id/btnEnterSaveS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:width="139dp"
        android:backgroundTint="@color/Celadon_Blue"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/etEnterSecondS"
        app:layout_constraintTop_toBottomOf="@id/rgEnterSetStateS" />

</androidx.constraintlayout.widget.ConstraintLayout>