<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clDetailsS"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Honeydew"
    tools:context=".activities.series.SeriesDetails">

    <ImageView
        android:id="@+id/ivDetailsImageS"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDetailsTitleS"
        android:layout_width="match_parent"
        android:paddingHorizontal="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ellipsize="marquee"
        android:gravity="center_vertical"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:singleLine="true"
        android:scrollHorizontally="true"
        android:text="@string/series_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivDetailsImageS" />

    <TextView
        android:id="@+id/tvDetailsSeasonS"
        android:layout_width="match_parent"
        android:paddingHorizontal="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/season"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetailsTitleS" />

    <TextView
        android:id="@+id/tvDetailsEpisodeS"
        android:layout_width="match_parent"
        android:paddingHorizontal="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/episode"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetailsSeasonS" />

    <TextView
        android:id="@+id/tvDetailsYearReleasedS"
        android:layout_width="match_parent"
        android:paddingHorizontal="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/year_released"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetailsEpisodeS" />

    <TextView
        android:id="@+id/tvDetailsRatingS"
        android:layout_width="match_parent"
        android:paddingHorizontal="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetailsYearReleasedS" />

    <TextView
        android:id="@+id/tvDetailsOverviewS"
        android:layout_width="match_parent"
        android:paddingHorizontal="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:minHeight="40dp"
        android:text="@string/overview"
        android:maxLines="12"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:scrollbars="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetailsRatingS" />

</androidx.constraintlayout.widget.ConstraintLayout>

